<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bar_code_system"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/upc_a" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upc_e" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ean13" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ean8" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code39" />

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itf" />

            <RadioButton
                android:id="@+id/radio6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/codabar" />

            <RadioButton
                android:id="@+id/radio7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code93" />

            <RadioButton
                android:id="@+id/radio8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code128" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:gravity="center"
            android:text="@string/data"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/upc_a_data" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:gravity="center"
            android:text="@string/alignment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/left_alignment" />

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_alignment" />

            <RadioButton
                android:id="@+id/radio11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_alignment" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:gravity="center"
            android:text="@string/width"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bar_code_width_hint"
            android:inputType="number"
            android:text="@string/number3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:gravity="center"
            android:text="@string/height"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bar_code_height_hint"
            android:inputType="number"
            android:text="@string/number162" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:gravity="center"
            android:text="@string/character_position"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/not_printed" />

            <RadioButton
                android:id="@+id/radio13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/above_the_bar_code" />

            <RadioButton
                android:id="@+id/radio14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/below_the_bar_code" />

            <RadioButton
                android:id="@+id/radio15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both_above_and_below_the_bar_code" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/form_feed" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/print" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>